--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,51 @@
 <html>
-        <head> <title>checkpoint1</title></head>
-        <body>
-            <ul>
-                <li>
-                   <a href="index.html"> home</a> 
+    <head> 
+            <link rel="stylesheet" href="css/style.css">
+        <title>checkpoint1</title>
+    </head>
+    <body>
+            <div class=" divhead">
+                    <div id="logo">
+                            <img src="https://img.jobi.tn/0dac82dd-7892-7c3a-c114-369c6b239e58" alt="gmc.png">
+                        </div>
+            <ul class="nav">
+                <h3>
+                <li >
+                   <a class="headspace" href="index.html"> home</a> 
                 </li>
                 <li>
-                 <a href="courses.html">   courses</a>
+                 <a class="headspace" href="courses.html">   courses</a>
                 </li>
                 <li>
-                    <a href="contact.html">contact</a>
+                    <a class="headspace" href="contact.html">contact</a>
                 </li>
+            </h3>
             </ul>
-            <h1><b> &nbsp;CONTACT</b></h1>
-            <br>
-            <br>
-            <br>
-            <h2><b>Feedback</b></h2>
-            <br>
-            <form>
-            <button>B</button>
-            <button>I</button>
-            <button>Underline</button>
           
-                <select> 
-                    <option> 20xp </option>
-                    <option> 30xp </option>
-                    <option> 50xp </option>
-                </select>
-                <select> 
-                        <option> arial </option>
-                        <option> hhhh </option>
-                        <option> pppp </option>
-                    </select>
-            </form>
-            <form >
-                <textarea cols="20"  rows="10"></textarea>
-            </form>
-        </body>
+            </div>
+        <div class = div2>
+        <h1><b> &nbsp;CONTACT</b></h1>
+    </div>
+    <div class= div2>
+        <h3>
+  <lable>Nom:</lable><input type="text" placeholder="your name">
+  <br>
+  <form>
+      <label>Track</label>
+      <select>
+          <option>web</option>
+          <option>AI</option>
+          <option>GAME</option>
+      </select>
+ 
+  <br>
+   <lable>Email Adress:</lable><input type="text" placeholder="name@exemple.com">
+  <br>
+  <label>phone number:</label><input type="number" value="22332222">
+  <br>
+  <input type="submit"  value="submit">
+</form>
+        </h3>
+    </div>
+    </body>
 </html>
